# xglamo

./: configure.ac
hw/kdrive/: Makefile.am
hw/kdrive/glamo/: Makefile.am  glamo-cmdq.c  glamo-cmdq.h  glamo-cursor.c  glamo-draw.c  glamo-draw.h  glamo-funcs.c  glamo-funcs.h  glamo-log.h  glamo-randr.c  glamo-regs.h  glamo-stub.c  glamo-video.c  glamo.c  glamo.h
hw/kdrive/src/: kmode.c
